# server/domain/donor.go
@@ -27,6 +27,16 @@ type CreateDonorParams struct {
 	DonorPhoneNumber                string       `json:"donor_phone_number"`
 	DonorBloodTypeNum               int16        `json:"donor_blood_type_num"`
 }
+type CreateDonorParamsDTO struct {
+	DonorName                       string    `json:"donor_name"`
+	DonorSurname                    string    `json:"donor_surname"`
+	DonorBloodType                  string    `json:"donor_blood_type"`
+	DonorUniqueIdentificationNumber string    `json:"donor_unique_identification_number"`
+	DonorAddress                    string    `json:"donor_address"`
+	DonorLastDonation               time.Time `json:"donor_last_donation"`
+	DonorPhoneNumber                string    `json:"donor_phone_number"`
+	DonorBloodTypeNum               int16     `json:"donor_blood_type_num"`
+}
 type ShowDonorParams struct {
 	DonorName                       string    `json:"donor_name"`
 	DonorSurname                    string    `json:"donor_surname"`
@@ -41,4 +51,8 @@ type ShowDonorParams struct {
 type DonorsByBloodTypeParams struct {
 	RowOrder  string `json:"row_order"`
 	LimitSize int32  `json:"limit_size"`
+}
+
+type DonorUniqueNumber struct {
+	UniqueNumber string `json:"unique_number"`
 }
