# swagger.json
@@ -190,6 +190,85 @@
         }
       }
     },
+    "/donor/": {
+      "post": {
+        "description": "You create an donor for given values",
+        "tags": [
+          "Donor"
+        ],
+        "operationId": "CreateNewDonor",
+        "parameters": [
+          {
+            "name": "Body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "donor_address": {
+                  "type": "string",
+                  "x-go-name": "DonorAddress"
+                },
+                "donor_blood_type": {
+                  "type": "string",
+                  "x-go-name": "DonorBloodType"
+                },
+                "donor_blood_type_num": {
+                  "type": "integer",
+                  "format": "int16",
+                  "x-go-name": "DonorBloodTypeNum"
+                },
+                "donor_last_donation": {
+                  "type": "string",
+                  "format": "date-time",
+                  "x-go-name": "DonorLastDonationDate"
+                },
+                "donor_name": {
+                  "type": "string",
+                  "x-go-name": "DonorName"
+                },
+                "donor_phone_number": {
+                  "type": "string",
+                  "x-go-name": "DonorPhoneNumber"
+                },
+                "donor_surname": {
+                  "type": "string",
+                  "x-go-name": "DonorSurname"
+                },
+                "donor_unique_identification_number": {
+                  "type": "string",
+                  "x-go-name": "DonorUniqueIdentificationNumber"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/genericResponse"
+          },
+          "500": {
+            "$ref": "#/responses/genericResponse"
+          }
+        }
+      }
+    },
+    "/donor/blood-type/{blood_type}": {
+      "get": {
+        "description": "You receive an donor for given id",
+        "tags": [
+          "Donor"
+        ],
+        "operationId": "DonorByBloodType",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/donorResponse"
+          },
+          "500": {
+            "$ref": "#/responses/genericResponse"
+          }
+        }
+      }
+    },
     "/donor/donors": {
       "get": {
         "description": "You receive an list of donors",
@@ -200,6 +279,55 @@
         "responses": {
           "200": {
             "$ref": "#/responses/donorListResponse"
+          },
+          "500": {
+            "$ref": "#/responses/genericResponse"
+          }
+        }
+      }
+    },
+    "/donor/unique": {
+      "post": {
+        "description": "You receive an donor for given Unique Number",
+        "tags": [
+          "Donor"
+        ],
+        "operationId": "DonorByUniqueNumber",
+        "parameters": [
+          {
+            "name": "Body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "unique_number": {
+                  "type": "string",
+                  "x-go-name": "UniqueNumber"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "$ref": "#/responses/donorResponse"
+          },
+          "500": {
+            "$ref": "#/responses/genericResponse"
+          }
+        }
+      }
+    },
+    "/donor/{donor_id}": {
+      "get": {
+        "description": "You receive an donor",
+        "tags": [
+          "Donor"
+        ],
+        "operationId": "DonorById",
+        "responses": {
+          "200": {
+            "$ref": "#/responses/donorResponse"
           },
           "500": {
             "$ref": "#/responses/genericResponse"
@@ -668,6 +796,17 @@
             "items": {
               "$ref": "#/definitions/showDonor"
             }
+          }
+        }
+      }
+    },
+    "donorResponse": {
+      "description": "Donor with basic info",
+      "schema": {
+        "type": "object",
+        "properties": {
+          "Donor": {
+            "$ref": "#/definitions/showDonor"
           }
         }
       }
